add a missing / to the homepage deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nacen.github.io/color-project",
+  "homepage": "https://nacen.github.io/color-project/",
   "name": "color-project",
   "version": "0.1.0",
   "private": true,
